examples/ingress-traefik-certmanager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
  name: nginx-ingress
  namespace: default
spec:
  rules:
  - host: test.atenea.lat
    http:
      paths:
      - backend:
          service:
            name: nginx-demo
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - test.atenea.lat
    secretName: test-atenea-cert
